--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -14,7 +14,8 @@
     "@chakra-ui/toast": "^1.5.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@onflow/fcl": "^1.0.3-alpha.0",
+    "@onflow/fcl": "^1.1.0",
+    "@payglide/sdk-js": "^0.2.0",
     "browser-passworder": "^2.0.3",
     "buffer": "^6.0.3",
     "elliptic": "^6.5.4",
@@ -65,6 +66,6 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.10.0"
   }
 }
